// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useFundEscrowSetup should render header correctly for funding in mempool 1`] = `
<Header
  icons={
    [
      {
        "color": "#099DE2",
        "id": "helpCircle",
        "onPress": [MockFunction],
      },
    ]
  }
  title="transaction pending"
/>
`;

exports[`useFundEscrowSetup should render header correctly for unfunded offers 1`] = `
<Header
  icons={
    [
      {
        "color": "#9F8C82",
        "id": "xCircle",
        "onPress": [MockFunction],
      },
      {
        "color": "#099DE2",
        "id": "helpCircle",
        "onPress": [MockFunction],
      },
    ]
  }
  title="fund escrow"
/>
`;
